# api-client

./: .gitignore  Cargo.toml  README.md  flake.nix  start_test_server.sh
.github/workflows/: rust.yml
nix/: demostf-api.nix  overlay.nix  test-runner.nix  test.nix
src/: client.rs  lib.rs  tests.rs
tests/: tests.rs
