[package]
name = "demostf-client"
version = "0.4.3"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Api client for demos.tf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/demostf/api-client"
readme = "README.md"
exclude = [ "tests/data/gully.dem" ]
keywords = ["tf2", "demo"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
time = { version = "0.3.13", features = ["serde"] }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "multipart", "stream"] }
thiserror = "1.0.32"
hex = "0.4.3"
steamid-ng = "1.0.0"
bytes = "1.2.1"
futures-util = "0.3.23"
tracing = "0.1.36"
tinyvec = "1.6.0"
md5 = "0.7.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros"] }
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
