[package]
name = "demostf-client"
version = "0.4.5"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
description = "Api client for demos.tf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/demostf/api-client"
readme = "README.md"
exclude = ["tests/data/gully.dem"]
keywords = ["tf2", "demo"]
categories = ["api-bindings"]
rust-version = "1.81.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde"] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "multipart",
    "stream",
] }
thiserror = "2.0.12"
hex = "0.4.3"
steamid-ng = "1.0.0"
bytes = "1.10.1"
futures-util = "0.3.31"
tracing = "0.1.41"
tinyvec = { version = "1.9.0", features = ["alloc"] }
md5 = "0.7.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
